# rust-examples

./: README.md
binary_tree/src/: main.rs
binary_tree/src/binary_tree/: branch.rs  convert.rs  iter.rs  mod.rs  node.rs  tree_element.rs
kvs/: Cargo.toml  README.md
kvs/src/: error.rs  errors.rs  kvs.rs  kvs_stream.rs  main.rs  types.rs
kvs/src/expansion/: str.rs
kvs/src/handlers/: get.rs  set.rs
kvs/src/kvs/: mod.rs  response.rs  stream.rs
kvs/src/query/: args.rs  method.rs  mod.rs  query.rs  str_ssv_array.rs
matrix/: README.md
matrix/src/: main.rs
matrix/src/matrix/: index.rs  index_mut.rs  macros.rs  matrix.rs  matrix_tests.rs  mod.rs
tcp_echo/: Cargo.toml  README.md
tcp_echo/src/: client.rs  server.rs
xtask_pattern/: Cargo.toml  README.md
xtask_pattern/.cargo/: config.toml
xtask_pattern/xtask/: Cargo.toml
xtask_pattern/xtask/src/: main.rs
